--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,7 +15,7 @@ option(AUVLIB_WITH_GSF "Enable reading and processing gsf data"    ON)
 option(AUVLIB_USE_LIBIGL_EIGEN "Use libigl's version of Eigen"     ON)
 option(AUVLIB_USE_LIBIGL_GLFW "Use libigl's version of glfw"       OFF)
 option(AUVLIB_USE_LIBIGL_TINYXML "Use libigl's version of tinyxml" OFF)
-option(AUVLIB_USE_PYTHON3 "Use python3 instead of python2"         OFF)
+option(AUVLIB_USE_PYTHON3 "Use python3 instead of python2"         ON)
 option(AUVLIB_EXPORT_BUILD "Export build dir configs"              ON)
 option(AUVLIB_WITH_CERES "Use the ceres library, required for refraction tracing" OFF)
 
@@ -75,7 +75,7 @@ if(MSVC)
   endif()
 else()
   if (AUVLIB_USE_PYTHON3)
-    set(PYTHON_EXECUTABLE /usr/bin/python3.5)
+    set(PYTHON_EXECUTABLE /usr/bin/python3.8)
   else()
     set(PYTHON_EXECUTABLE /usr/bin/python2.7)
   endif()
