Modified cmake and param for thesis

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -75,7 +75,8 @@ if(MSVC)
   endif()
 else()
   if (AUVLIB_USE_PYTHON3)
-    set(PYTHON_EXECUTABLE /usr/bin/python3.8)
+    set(PYTHON_EXECUTABLE /home/jiarui/anaconda3/envs/auvlib_py38/bin/python)
+    #set(PYTHON_EXECUTABLE /usr/bin/python3.8)
   else()
     set(PYTHON_EXECUTABLE /usr/bin/python2.7)
   endif()
